--- a/react-project/src/Home.css
+++ b/react-project/src/Home.css
@@ -1,11 +1,6 @@
 .container {
   display: flex;
-}
-
-.sidebar {
-  width: 200px;
-  background-color: #f0f0f0;
-  padding: 20px;
+  margin-top: 100px;
 }
 
 .main-content {
@@ -27,30 +22,4 @@ td {
 
 th {
   background-color: #f0f0f0;
-}
-
-.form-group {
-  margin-bottom: 10px;
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-}
-
-input[type='text'],
-textarea {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ddd;
-  box-sizing: border-box;
-}
-.form-container {
-}
-button {
-  padding: 10px 20px;
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  cursor: pointer;
 }
