--- a/react-project/src/components/sidebar/Sidebar.module.css
+++ b/react-project/src/components/sidebar/Sidebar.module.css
@@ -11,6 +11,7 @@
   display: flex;
   justify-content: space-between;
   list-style-type: none;
+  padding: 0;
 }
 .details {
   text-align: center;
