--- a/react-project/src/components/footer/Footer.module.scss
+++ b/react-project/src/components/footer/Footer.module.scss
@@ -1,8 +1,9 @@
+$background-color_1: #f0f0f0;
+
 .footer {
   padding: 20px;
-  background-color: #f0f0f0;
+  background-color: $background-color_1;
 }
-
 .wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -10,25 +11,20 @@
   height: 50px;
   border-width: medium;
 }
-
 .github {
   text-transform: uppercase;
   font-size: 15px;
 }
-
 .logo {
   width: 70px;
 }
-
 .year {
   text-align: center;
 }
-
 .logo_wrapper {
   display: flex;
   justify-content: end;
 }
-
 .developers {
   padding-top: 5px;
   font-size: 10px;
