--- a/react-project/src/components/header/Header.module.scss
+++ b/react-project/src/components/header/Header.module.scss
@@ -1,9 +1,24 @@
+$color_1: #717171;
+$font-family_1: 'Inter';
+$background-color_1: #cbdfc7;
+$background-color_2: beige;
+$background-color_3: #499a18;
+$background-color_4: #cbdfc772;
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
 .header {
   display: flex;
   height: 100px;
   left: 0px;
   top: 0px;
-  background-color: #cbdfc7;
+  background-color: $background-color_1;
   padding: 0 30px;
   margin: 0 auto;
   position: absolute;
@@ -12,24 +27,19 @@
   left: 0;
   z-index: 1;
 }
-
 .wrapper {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  /*grid-template-columns: repeat(2, 1fr);*/
   align-items: center;
   text-transform: uppercase;
 }
-
 .navbar {
   height: 50px;
 }
-
 .link {
   text-align: center;
 }
-
 .header_list {
   display: flex;
   list-style: none;
@@ -42,19 +52,17 @@
   gap: 20px;
   align-items: center;
 }
-
 .header_nav_welcome {
   display: flex;
   flex-wrap: wrap;
 }
-
 .button {
   width: 158px;
   height: 44px;
   box-sizing: border-box;
   border: 2px solid #f1ebe8;
   border-radius: 10px;
-  font-family: 'Inter';
+  font-family: $font-family_1;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -63,12 +71,12 @@
   transition: all 500ms ease;
   cursor: pointer;
   margin-right: 40px;
-  background-color: beige;
-  color: #717171;
-}
-.button:hover {
-  background-position: 0 100%;
-  background-color: #499a18;
+  background-color: $background-color_2;
+  color: $color_1;
+  &:hover {
+    background-position: 0 100%;
+    background-color: $background-color_3;
+  }
 }
 .wrapper_button {
   margin-left: 0px;
@@ -76,54 +84,39 @@
 .lang_switcher {
   text-align: center;
 }
-
 #sticky {
   position: fixed;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10px);
   animation: slideDown 0.35s ease-out;
   height: 70px;
-  background-color: #cbdfc772;
+  background-color: $background-color_4;
 }
-
-@keyframes slideDown {
-  from {
-    transform: translateY(-100%);
-  }
-  to {
-    transform: translateY(0);
-  }
-}
-
 @media screen and (max-width: 900px) {
   .button {
     width: 100px;
     height: 30px;
     border-radius: 8px;
     font-size: 12px;
-    
   }
-
   .header {
     padding: 0 20px;
   }
 }
 @media screen and (max-width: 768px) {
   .button {
-   margin-left: -200px;
+    margin-left: -200px;
   }
 }
 @media screen and (max-width: 500px) {
   .wrapper {
     padding: 0 10px;
   }
-
   .button {
     width: 70px;
     height: 25px;
     font-size: 12px;
   }
-
   .header_list {
     display: flex;
     flex-direction: column;
