refactor:changed function updateFileMetadata in form and save in redux metadatas;feat:add new styles for sidebar and home

--- a/react-project/src/components/sidebar/Sidebar.module.scss
+++ b/react-project/src/components/sidebar/Sidebar.module.scss
@@ -4,6 +4,7 @@ $background-color_1: #f0eedd8a;
   width: 300px;
   background-color: $background-color_1;
   padding: 20px;
+  overflow-y: auto;
 }
 .button_remove {
   width: 40px;
