--- a/react-project/src/Home.module.scss
+++ b/react-project/src/Home.module.scss
@@ -3,10 +3,12 @@ $background-color_1: #f0f0f0;
 .container {
   display: flex;
   margin-top: 100px;
+  height: 100vh;
 }
 .main_content {
   flex: 1;
   padding: 20px;
+  overflow-y: auto;
 }
 .table {
   width: 100%;
