refactor:changed styles in sidebar

--- a/react-project/src/components/sidebar/Sidebar.module.scss
+++ b/react-project/src/components/sidebar/Sidebar.module.scss
@@ -1,7 +1,7 @@
 $background-color_1: #f0eedd8a;
 
 .sidebar {
-  width: 300px;
+  width: 30%;
   background-color: $background-color_1;
   padding: 20px;
   overflow-y: auto;
